# doctest_config_header_lib

./: CMakeLists.txt  README.md
src/: foo.h
tests/: CMakeLists.txt  default.cpp  main.cpp  return42.cpp
